# datafy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  setup.sh  style-guide.md
.github/: pull_request_template.md
.github/linters/: .python-lint
.github/workflows/: docker-image.yml  linter.yml  test.yml
api/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml
api/dependencies/: spotify.py
api/models/: README.md  artist.py  collection.py  common.py  item_headers.yaml  rec.py  song.py
api/routes/: __init__.py  artists.py  genres.py  songs.py
api/tests/: client_fixture.py  test_artists.py  test_genres.py  test_recs.py  test_songs.py
artists/: Dockerfile  Pipfile  README.md  main.py  setup.py
backend/: Dockerfile  Pipfile  README.md  main.py
backend/api/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/api/dependencies/: spotify.py
backend/api/models/: README.md  artist.py  artist_query.py  artist_response.py  collection.py  common.py  genre.py  genre_query.py  genre_response.py  rec.py  recommendation_query.py  recommendation_response.py  song.py  song_query.py  song_response.py
backend/api/resources/: __init__.py  artists.py  base.py  genres.py  recommendations.py  registry.py  songs.py
backend/api/routers/: __init__.py  artists.py  genres.py  recs.py  songs.py
backend/api/routes/: genres.py
backend/api/tests/: client_fixture.py  test_artist_resource.py  test_artists.py  test_genres.py  test_genres_resource.py  test_recs.py  test_songs.py  test_songs_resource.py
backend/aws/: __init__.py  aws.py  dynamo.py  eventbridge.py  secretmanager.py  ses.py  sqs.py
backend/aws/models/: email.py  lambda_func.py
backend/aws/tests/: test_ses_model.py
backend/cli/: README.md  pyproject.toml
backend/fapi/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/fapi/dependencies/: spotify.py
backend/fapi/models/: README.md  artist.py  artists.py  genre.py  rec.py  song.py
backend/fapi/routers/: __init__.py  artists.py  genres.py  recs.py  songs.py
backend/fapi/tests/: test_artists.py  test_genres.py  test_recs.py  test_songs.py
backend/mood_tracker/: Makefile  README.md  go.mod  go.sum  main.go  package.json  serverless.yml
backend/mood_tracker/aws/: dynamo.go  smanager.go
backend/mood_tracker/spotify/: spotify.go
backend/newsletter/: Justfile  README.md  handler.py  package.json  pyproject.toml  serverless.yml  telemetry
backend/newsletter/libs/: newsletter.py
backend/pclr/: .dockerignore  Dockerfile  Justfile  Makefile  README.md  main.py  pyproject.toml
backend/pclr/clients/: postgres.py  secret_manager.py  spotify.py
backend/pclr/db/: migrations.sql
backend/pclr/domain/: common.py
backend/pclr/models/: track.py
backend/pclr/pclr/: main.py
backend/pclr/tasks/: aws.py  db.py  spotify.py
backend/pclr/telemetry/: logging.py
backend/pclr/tests/: test_pclr.py  test_task.py
backend/play_counter/: Justfile  README.md  handler.py  package.json  pyproject.toml  requirements.txt  serverless.yml
backend/play_counter/clients/: aws.py  spotify.py
backend/play_counter/models/: lambda_state.py  track.py
backend/play_counter/telemetry/: logging.py
backend/song-analyzer/: go.mod  go.sum  main.go
backend/song-analyzer/database/: postgres.go
backend/song-analyzer/net/: requests.go
backend/telemetry/: logging.py
cli/: Cargo.toml  Justfile  README.md  api.py  main.py  pyproject.toml  rec.py
cli/adapters/: __init__.py  artists.py  base.py  genres.py  songs.py
cli/cli_parser/: api_cli.py  datafy_cli.py  rec_cli.py
cli/libs/: url_builder.py
cli/src/: main.rs
cli/src/libs/: inputs.rs  mod.rs  options.rs  processors.rs  url_builder.rs
cli/src/models/: artists.rs  collections.rs  content.rs  genres.rs  mod.rs  recs.rs  songs.rs
cli/templates/: api_cli_tables.yaml  rec_cli_tables.yaml
db/: migrations.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/components/: AutoGrid.tsx  Dashboard.tsx  TableHeader.tsx  TopArtists.tsx  TopTracks.tsx  TracksByGenre.tsx
frontend/pages/: index.tsx
oracle/: go.mod  main.go
oracle/database/: postgres.go
oracle/net/: requests.go
oracle/spotify/: auth.go  spotify.go
oracle/telemetry/: logging.go
pclr/: .dockerignore  Makefile  README.md  main.py  pyproject.toml
pclr/clients/: postgres.py  spotify.py
pclr/db/: migrations.sql
pclr/docs/: db_schema.md
pclr/models/: db.py  ops.py  result.py  track.py
pclr/tasks/: db.py  spotify.py
rcli/: Cargo.toml  README.md
rcli/src/: main.rs
sherlock/: Makefile  go.mod  go.sum  main.go
sherlock/analysis/: analyze.go
sherlock/database/: postgres.go
song-analyzer/: Justfile  go.mod  main.go
song-analyzer/database/: postgres.go
song-analyzer/net/: requests.go
song-analyzer/spotify/: spotify.go
(+12 files in other folders)
