[package]
name = "rcli"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
dialoguer = "0.9"
prettytable-rs = "^0.8"
reqwest = { version = "^0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
