[tool.poetry]
name = "cli"
version = "1.0.0"
description = ""
authors = [
    "Donovan Dicks <donovan.dicks@outlook.com>",
    "Noah Kennedy <nakennedy11@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
prettytable = "*"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
