[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend system for the Datafy app"
authors = ["Donovan Dicks <donovan.dicks@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "*"
flask = "*"
flask-restful = "*"
python-dotenv = "*"
pydantic-webargs = "*"

[tool.poetry.dev-dependencies]
black = "*"
pylint = "*"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
