[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend system for the Datafy app"
authors = [
    "Donovan Dicks <donovan.dicks@outlook.com>",
    "Noah Kennedy <nakennedy11@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "*"
flask = "*"
flask-restful = "*"
python-dotenv = "*"
# pydantic = { git = "https://github.com/samuelcolvin/pydantic@master#egg=pydantic", branch = "master" }
pydantic-webargs = "*"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = "*"
pylint = "*"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
