[tool.poetry]
name = "newsletter"
version = "0.1.0"
description = "Scheduled task to report to a user about their listening habits"
authors = ["Donovan Dicks <donovan.dicks@outlook.com>"]

[tool.poetry.dependencies]
python = "3.9"
boto3 = "^1.20.26"
pydantic = "^1.8.2"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
