[tool.poetry]
name = "pclr"
version = "0.1.0"
description = ""
authors = ["Donovan Dicks <donovan.dicks@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
