[tool.poetry]
name = "pclr"
version = "0.1.0"
description = ""
authors = ["Donovan Dicks <donovan.dicks@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
prefect = "^0.15.13"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
