[tool.poetry]
name = "pclr"
version = "0.1.0"
description = ""
authors = ["Donovan Dicks <donovan.dicks@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
prefect = ">=2.0b"
spotipy = "^2.19.0"
boto3 = "^1.21.3"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"
greenlet = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
