[tool.poetry]
name = "play_counter"
version = "0.1.0"
description = "Scheduled task to count users song plays"
authors = ["Donovan Dicks <donovan.dicks@outlook.com>"]

[tool.poetry.dependencies]
python = "3.9"
spotipy = "^2.19.0"
boto3 = "^1.20.26"
pydantic = "^1.8.2"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
